Changes related to application-listing component initial commit and API call sync with login gates

--- a/src/app/application-onboarding/application/application.component.less
+++ b/src/app/application-onboarding/application/application.component.less
@@ -153,6 +153,9 @@ input.ng-invalid.ng-touched , select.ng-invalid.ng-touched{
 	color: #6c757d;
 	cursor: pointer;
 }
+.mt_custom-3{
+	margin-top: 10px;
+}
 .group_permission{
 	a{
 		color: #007bff;
