--- a/src/styles.less
+++ b/src/styles.less
@@ -76,3 +76,181 @@ url('../src/assets/fonts/Avenir-Book.svg#Avenir-Book') format('svg');
 font-weight: normal;
 font-style: normal;
 }
+//default css
+
+html{
+	font-size: 100.01%;
+}
+body{
+	font-family: 'Roboto', sans-serif;
+	background: #f5f6f7;
+	font-weight: 400;
+	line-height: 1.5;
+	font-size: 14px;
+	color: #041131;
+}
+.container{
+	max-width: 1170px;
+}
+:focus{
+	-webkit-box-shadow: none !important;
+	box-shadow: none !important;
+}
+a, .btn, button, .content_section, .data_list, .box-icon label, .box-icon img{
+	-webkit-transition: all 0.3s linear;
+	-o-transition: all 0.3s linear;
+	transition: all 0.3s linear;
+}
+hr{
+	opacity: 0.6;
+	margin-top: 0.6rem;
+	margin-bottom: 0.6rem;
+	border-color: #989898;
+}
+.underline{
+	text-decoration: underline;
+}
+.mw-250{
+	min-width: 250px;
+	max-width: 250px;
+}
+.text-primary{
+	color: #259bf3 !important;
+}
+.text-danger{
+	color: #a70000 !important;
+}
+.text-warning{
+	color: #c60 !important;
+}
+.text-error{
+	color: #ff3514;
+}
+.text-wrap-normal{
+	white-space: normal;
+}
+.btn{
+	font-family: 'Open Sans', sans-serif;
+	font-size: 14px;
+	color: #304151;	
+}
+.btn-white{
+	background: #fff;
+	color: #304151;	
+}
+.btn-primary, .badge-primary, .sw-btn-next{
+	color: #fff;
+	background: #009bfa;
+	border-color: #009bfa;
+}
+.btn-primary:hover, .sw-btn-next:hover{
+	background: #2480b9;
+	border-color: #2480b9;	
+}
+.btn-default, .sw-btn-prev{
+	padding: 6px 15px;
+	color: #304151 !important;
+	background: #fff !important;
+	border: 1px #e4ebf1 solid;
+}
+.btn-default:hover, .sw-btn-prev:hover{
+	background: #dadada !important;
+}
+.btn-link-black.btn-link{
+	text-decoration: underline !important;
+	color: #000 !important;
+}
+.btn-sm{
+	padding: 3px 10px;
+}
+.btn-default .userPic{
+	display: inline-block;
+    margin-bottom: 2px;
+}
+.dropdown-item{
+	padding: 0.15rem 0.9rem;
+}
+.dropdown-menu{
+	font-size: 14px;
+	min-width: 100%;
+}
+.content_section{
+	margin-left: 260px;
+}
+.view_in .content_section{
+	margin-left: 60px;
+}
+.main-topBar{
+	z-index: 1000;
+	background: #fff;
+	padding: 8px 25px;
+	position: relative;
+	border-bottom: 2px #c9ced3 solid;
+}
+.input-group-search .form-control, .input-group-search .btn{
+	border: none !important;
+	border-radius: 5px;
+}
+.input-group-search{
+	border: 1px #d8dfe3 solid;
+	border-radius: 5px;
+	overflow: hidden;
+	color: #d8dfe3;
+	width: 260px;
+}
+.form-control{
+	font-family: 'Roboto', sans-serif;
+	font-size: 14px;
+	color: #161f2f;
+}
+.form-control::-webkit-input-placeholder {
+  color: #c9d0d8;
+}
+.form-control:-ms-input-placeholder {
+  color: #c9d0d8;
+}
+.form-control::placeholder {
+  color: #c9d0d8;
+}
+.input-group-search .btn i{
+	font-size: 14px;
+	color: #7f93a8;
+}
+.table{
+	font-family: 'Open Sans', sans-serif;
+}
+.table-outline{
+	border: 1px solid #e5e7e8;
+}
+.table-pet-service{
+	font-size: 13px;
+}
+.table-sm-text{
+	font-size: 13px;
+}
+.table-pet-service th, .table-pet-service td{
+	padding: 8px 4px;
+}
+.table-pet-service th{
+	border: none !important;
+}
+.table-pet-service th:first-child, .table-pet-service td:first-child{
+	text-align: left;
+}
+.table-no-bordered td{
+	border: none;
+}
+.table-font-weight-600 td{
+	font-weight: 600;
+}
+.not-attempt td{
+	background: #dee2e6;
+}
+.table-avenir td{
+	font-family: 'Avenir Book';
+	font-weight: normal;
+}
+.table-avenir .active-service td{
+	font-family: 'Avenir';
+	font-weight: 600;
+}	
