--- a/src/app/application-onboarding/application/application.component.html
+++ b/src/app/application-onboarding/application/application.component.html
@@ -101,7 +101,7 @@
               <form [formGroup]="createApplicationForm">
                 <div class="form-group">
                   <label>Application Name</label>
-                  <input type="text" class="form-control" formControlName="name">
+                  <input type="text" class="form-control" formControlName="name" [readonly]="editMode">
                   <span *ngIf="createApplicationForm.get('name').invalid && createApplicationForm.get('name').touched"
                     class="help-block">
                     <span *ngIf="createApplicationForm.get('name').errors['required']">Application Name is
@@ -113,7 +113,7 @@
                 <!-- /.form-group -->
                 <div class="form-group">
                   <label>Application Description</label>
-                  <textarea class="form-control" rows="3" formControlName="description"></textarea>
+                  <textarea class="form-control" rows="3" formControlName="description" [readonly]="editMode"></textarea>
                 </div>
                 <!-- /.form-group -->
               </form>
@@ -144,8 +144,8 @@
                         <div class="form-group mb-3 pl-4 text-muted">
                           <label>Service Name</label>
                           <div class="d-flex  mr-4 align-items-center">
-                            <input type="text" class="form-control input_len" formControlName="serviceName">
-                            <a class="text-muted ml-3 formarray_btn"  data-toggle="tooltip" data-placement="top" title="" data-original-title="Delete" 
+                            <input type="text" class="form-control input_len" formControlName="serviceName" [readonly]="isReadonly(i)">
+                            <a class="text-muted ml-3 formarray_btn"  data-toggle="tooltip" data-placement="right" title="Delete Service" 
                             (click)="deleteService(i)" *ngIf ="servicesForm.get('services')['controls'].length > 1 ? true : false">
                               <i class="fas fa-trash-alt"></i></a>
                             </div>
@@ -160,18 +160,20 @@
                               <div class="form-group mb-3 pl-5 text-muted">
                                 <label>Select Service Pipeline</label>
                                 <div class="d-flex  mr-5 align-items-center">
-                                  <select class="form-control" formControlName="pipelineType" (change)="onPipelineSelect(i,j)">
-                                    <option *ngFor="let pipelineData of pipelineExists" value="{{pipelineData.value}}">{{pipelineData.value}}</option>
+                                  <select class="form-control" formControlName="pipelinetemplate" (change)="onPipelineSelect(i,j,$event.target.value)">
+                                    <option *ngFor="let pipelineData of pipelineExists" value="{{pipelineData.name}}">{{pipelineData.name}}</option>
                                   </select>
                                   <!-- <a class="text-muted ml-3 formarray_btn"><i class="fas fa-plus"></i></a> -->
                                 </div>
-                                <span *ngIf="!pipelineArr.get('pipelineType').valid && pipelineArr.get('pipelineType').touched"
+                                <span *ngIf="!pipelineArr.get('pipelinetemplate').valid && pipelineArr.get('pipelinetemplate').touched"
                                 class="help-block">Pipeline is required</span>
                               </div>
                               <div class="form-group mb-3 pl-5 text-muted">
                                 <label>Cloud Account</label>
                                 <div class="d-flex  mr-5 align-items-center">
-                                  <input type="text" class="form-control" formControlName="cloudAccount">
+                                  <select class="form-control" formControlName="cloudAccount">
+                                    <option *ngFor="let cloudData of cloudAccountExist" value="{{cloudData.name}}">{{cloudData.name}}</option>
+                                  </select>
                                 </div>
                                 <span *ngIf="!pipelineArr.get('cloudAccount').valid && pipelineArr.get('cloudAccount').touched"
                                 class="help-block">Cloud Account is required</span>
@@ -188,12 +190,18 @@
                                 <div class="row" *ngFor="let pipelineParameterArr of pipelineArr.get('pipelineParameter')['controls']; let k=index">
                                   <div class="col-12 " [formGroupName]="k">
                                     <div class="form-group mb-3 pl-6 text-muted">
-                                      <label>{{pipelineParameterArr.get('label').value}}</label>
+                                      <label>{{pipelineParameterArr.get('name').value}}</label>
                                       <div class="d-flex mr-6 align-items-center">
-                                        <input type="text" class="form-control" formControlName="value">
+                                        <input *ngIf = "pipelineParameterArr.get('type').value !== 'boolean'" type="{{pipelineParameterArr.get('type').value === 'string'? 'text' : 'number'}}" 
+                                        class="form-control" placeholder="{{getProperValue(i,j,k)}}" formControlName="value">
+                                        <select *ngIf = "pipelineParameterArr.get('type').value === 'boolean'" class="form-control" formControlName="value">
+                                          <option value="">Select</option>
+                                          <option value="True">True</option>
+                                          <option value="False">False</option>
+                                        </select>
                                       </div>
                                       <span *ngIf="!pipelineParameterArr.get('value').valid && pipelineParameterArr.get('value').touched"
-                                              class="help-block">{{pipelineParameterArr.get('label').value}} is required</span>
+                                              class="help-block">{{pipelineParameterArr.get('name').value}} is required</span>
                                     </div>
                                   </div>
                                 </div>
@@ -261,9 +269,9 @@
                                 class="help-block">Value is required</span>
                               </div>
                               <div class="col-md-1">
-                                <button mat-icon-button class="formarray_btn" (click)="removeEnvironment(i)">
-                                  <i class="fas fa-trash-alt"></i>
-                                </button>
+                                <a class="text-muted formarray_btn"  data-toggle="tooltip" data-placement="right" title="Delete"
+                                (click)="removeEnvironment(i)">
+                                  <i class="mt_custom-3 fas fa-trash-alt"></i></a>
                               </div>
                             </div>
                             <br>
@@ -334,9 +342,9 @@
                                 class="help-block">Permission is required</span>
                               </div>
                               <div class="col-md-1">
-                                <button mat-icon-button class="formarray_btn" (click)="removeGroup(i)">
-                                  <i class="fas fa-trash-alt"></i>
-                                </button>
+                                <a class="text-muted formarray_btn"  data-toggle="tooltip" data-placement="right" title="Delete" 
+                                (click)="removeGroup(i)">
+                                  <i class="mt_custom-3 fas fa-trash-alt"></i></a>
                               </div>
                             </div>
                             <br>
