--- a/src/app/application-onboarding/appliaction-list/appliaction-list.component.less
+++ b/src/app/application-onboarding/appliaction-list/appliaction-list.component.less
@@ -10,9 +10,6 @@
 	border-top: 1px solid #ebedef;
 	border-bottom: 1px solid #ebedef;
 }
-.custom_height{
-    min-height: 593px;
-}
 .no_content{
 	text-align: center;
 }
@@ -40,4 +37,14 @@
 }
 .no_content p + p{
 	margin-top: 5px;
+}
+.pagination{
+	li{
+		cursor: pointer;
+	}
+}
+tbody{
+	a{
+		cursor: pointer;
+	}
 }
