--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -176,3 +176,7 @@ a, .btn, button, .content_section, .data_list{
 .dropdown-icon-remove .dropdown-toggle::after{
 	display: none;
 }
+.disabled_menu{
+    pointer-events: none;
+    opacity: 0.5;
+}
