--- a/src/app/application-onboarding/application-onboarding.component.html
+++ b/src/app/application-onboarding/application-onboarding.component.html
@@ -7,10 +7,10 @@
                         <li class="nav-item">
                             <a class="nav-link active">Applications</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item disabledMenu">
                             <a class="nav-link">Data Sources</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item disabledMenu">
                             <a class="nav-link">Cloud Services</a>
                         </li>
                     </ul>
