--- a/src/app/audit/audit.component.html
+++ b/src/app/audit/audit.component.html
@@ -352,84 +352,41 @@
                   </div>
                   <div class="form-group mx-sm-3 mb-2">
                     <div class="dropdown">
-                      <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded='false' #datedropdownbtn>
                         Select date range
                       </button>
-                      <div class="dropdown-menu dropdown-menu-picker" aria-labelledby="dropdownMenuButton">
-                        <div class="d-flex">
-                          <div>
-                            <h4>Date/Time Range</h4>
-                            <div class="custom-control custom-radio">
-                              <input type="radio" id="all-time-range" name="customRadio" class="custom-control-input">
-                              <label class="custom-control-label" for="all-time-range">All Time</label>
-                            </div>
-                            <div class="custom-control custom-radio">
-                              <input type="radio" id="last-month-range" name="customRadio" class="custom-control-input">
-                              <label class="custom-control-label" for="last-month-range">Last Month</label>
-                            </div>
-                            <div class="custom-control custom-radio">
-                              <input type="radio" id="last-week-range" name="customRadio" class="custom-control-input">
-                              <label class="custom-control-label" for="last-week-range">Last week</label>
-                            </div>
-                            <div class="custom-control custom-radio">
-                              <input type="radio" id="last-hours-range" name="customRadio" class="custom-control-input" checked>
-                              <label class="custom-control-label" for="last-hours-range">Last 24 Hours</label>
-                            </div>
-                            <div class="custom-control custom-radio">
-                              <input type="radio" id="custom-range" name="customRadio" class="custom-control-input">
-                              <label class="custom-control-label" for="custom-range">Custom</label>
-                            </div>
-                          </div>
-                          <div>
-                            <h4>Date Range</h4>  
-                            <div id="datePicker"></div>                          
-                          </div>
-                          <div>
-                            <h4>From</h4>             
-                            <div class="form-inline">
-                              <div class="form-group">
-                                <select class="form-control">
-                                  <option value="0">00</option>
-                                  <option value="1">01</option>
-                                  <option value="2">02</option>
-                                  <option value="3">03</option>
-                                  <option value="4">04</option>
-                                  <option value="5">05</option>
-                                  <option value="6">06</option>
-                                  <option value="7">07</option>
-                                  <option selected value="8">08</option>
-                                  <option value="9">09</option>
-                                </select>
+                      <form (submit)="dateForm(dForm.value)" #dForm="ngForm">
+                        <div *ngIf="dateDropdownOpen"  class="dropdown-menu dropdown-menu-picker" aria-labelledby="dropdownMenuButton" (click)="dateDropdown($event)">
+                          <div class="d-flex">
+                            <div>
+                              <h4>Date/Time Range</h4>
+                              <div class="custom-control custom-radio">
+                                <input type="radio" id="all-time-range" name="customRadio" class="custom-control-input" value="allTime" ngModel>
+                                <label class="custom-control-label" for="all-time-range">All Time</label>
                               </div>
-                              <!-- /.form-group -->
-                              <div class="form-group">:</div>
-                              <div class="form-group">
-                                <select class="form-control">
-                                  <option value="0">00</option>
-                                  <option value="1">01</option>
-                                  <option value="2">02</option>
-                                  <option value="3">03</option>
-                                  <option value="4">04</option>
-                                  <option value="5">05</option>
-                                  <option selected value="6">06</option>
-                                  <option value="7">07</option>
-                                  <option value="8">08</option>
-                                  <option value="9">09</option>
-                                </select>
+                              <div class="custom-control custom-radio">
+                                <input type="radio" id="last-month-range" name="customRadio" class="custom-control-input" value="lastMonth" ngModel>
+                                <label class="custom-control-label" for="last-month-range">Last Month</label>
                               </div>
-                              <!-- /.form-group -->
-                              <div class="form-group">
-                                <select class="form-control">
-                                  <option value="AM">AM</option>
-                                  <option value="PM">PM</option>
-                                </select>
+                              <div class="custom-control custom-radio">
+                                <input type="radio" id="last-week-range" name="customRadio" class="custom-control-input" value="lastWeek" ngModel>
+                                <label class="custom-control-label" for="last-week-range">Last week</label>
                               </div>
-                              <!-- /.form-group -->
+                              <div class="custom-control custom-radio">
+                                <input type="radio" id="last-hours-range" name="customRadio" class="custom-control-input" checked value="last24Hour" ngModel>
+                                <label class="custom-control-label" for="last-hours-range">Last 24 Hours</label>
+                              </div>
+                              <div class="custom-control custom-radio">
+                                <input type="radio" id="custom-range" name="customRadio" class="custom-control-input" value="custom" ngModel>
+                                <label class="custom-control-label" for="custom-range">Custom</label>
+                              </div>
                             </div>
-                            <!-- /.form-inline -->  
-
-                            <div class="mt-3">
-                              <h4>To</h4>             
+                            <div>
+                              <h4>Date Range</h4>  
+                              <div id="datePicker"></div>                          
+                            </div>
+                            <div>
+                              <h4>From</h4>             
                               <div class="form-inline">
                                 <div class="form-group">
                                   <select class="form-control">
@@ -470,18 +427,63 @@
                                 </div>
                                 <!-- /.form-group -->
                               </div>
-                              <!-- /.form-inline -->                     
-                            </div>                   
-
-                            <div class="mt-5">
-                              <button class="btn btn-block btn-clear mb-1">Clear</button>
-                              <button class="btn btn-block btn-primary">Apply</button>
+                              <!-- /.form-inline -->  
+  
+                              <div class="mt-3">
+                                <h4>To</h4>             
+                                <div class="form-inline">
+                                  <div class="form-group">
+                                    <select class="form-control">
+                                      <option value="0">00</option>
+                                      <option value="1">01</option>
+                                      <option value="2">02</option>
+                                      <option value="3">03</option>
+                                      <option value="4">04</option>
+                                      <option value="5">05</option>
+                                      <option value="6">06</option>
+                                      <option value="7">07</option>
+                                      <option selected value="8">08</option>
+                                      <option value="9">09</option>
+                                    </select>
+                                  </div>
+                                  <!-- /.form-group -->
+                                  <div class="form-group">:</div>
+                                  <div class="form-group">
+                                    <select class="form-control">
+                                      <option value="0">00</option>
+                                      <option value="1">01</option>
+                                      <option value="2">02</option>
+                                      <option value="3">03</option>
+                                      <option value="4">04</option>
+                                      <option value="5">05</option>
+                                      <option selected value="6">06</option>
+                                      <option value="7">07</option>
+                                      <option value="8">08</option>
+                                      <option value="9">09</option>
+                                    </select>
+                                  </div>
+                                  <!-- /.form-group -->
+                                  <div class="form-group">
+                                    <select class="form-control">
+                                      <option value="AM">AM</option>
+                                      <option value="PM">PM</option>
+                                    </select>
+                                  </div>
+                                  <!-- /.form-group -->
+                                </div>
+                                <!-- /.form-inline -->                     
+                              </div>                   
+  
+                              <div class="mt-5">
+                                <button class="btn btn-block btn-clear mb-1">Clear</button>
+                                <button class="btn btn-block btn-primary" id="applybtn">Apply</button>
+                              </div>
+  
                             </div>
-
                           </div>
+                          <!-- /.d-flex -->
                         </div>
-                        <!-- /.d-flex -->
-                      </div>
+                      </form>
                     </div>
                   </div>
                   <button type="submit" class="btn btn-default mb-2"><i class="fa fa-redo"></i> &nbsp;Clear</button>
@@ -556,7 +558,10 @@
                         <td *ngFor= "let i of allSuccessDisplayTrueValues">
                           <div *ngIf="i.key == 'pipelineStartTime' || i.key == 'pipelineEndTime' || i.key == 'manualJudgementEndTime'; then thenBlock else elseBlock"></div>
                           <ng-template #thenBlock><span>{{+item[i.key] | date:'medium'}}</span></ng-template>
-                          <ng-template #elseBlock><span>{{item[i.key]}}</span></ng-template>
+                          <ng-template #elseBlock>
+                            <span *ngIf="i.key === 'createdTime'?false:true">{{item[i.key]}}</span>
+                            <span *ngIf="i.key !== 'createdTime'?false:true">{{+item[i.key] | date:'medium'}}</span>
+                          </ng-template>
                         </td>
                       </tr>                         
                     </tbody>
