--- a/src/app/layout/header/header.component.less
+++ b/src/app/layout/header/header.component.less
@@ -1,3 +1,14 @@
  a{
     cursor: pointer;
   }
+.userImg { 
+  border-radius: 50%;
+  padding: 14px 12px 8px 12px;
+  text-align: center;
+  color: white;
+  b{
+    font-size: 24px;
+  }
+}
+  
+  
