--- a/src/app/application-onboarding/appliaction-list/appliaction-list.component.html
+++ b/src/app/application-onboarding/appliaction-list/appliaction-list.component.html
@@ -50,8 +50,8 @@
                         <tr *ngFor="let listData of currentPage | filter:searchData; let i=index">
                           <td>{{listData.name}}</td>
                           <td>{{listData.description}}</td>
-                          <td>
-                            <a   class="text-muted"  data-toggle="tooltip" data-placement="top" title="Edit"><i class="fas fa-pencil-alt"></i></a>
+                          <td *ngIf = "listData.status === 'ACTIVE' ? true : false">
+                            <a   class="text-muted"  data-toggle="tooltip" data-placement="top" title="Edit" (click)="editApplication(i)"><i class="fas fa-pencil-alt"></i></a>
                             <a (click)="appDelete(i)"  class="text-muted ml-2"  data-toggle="tooltip" data-placement="top" title="Delete"><i class="fas fa-trash-alt"></i></a>
                           </td>
                         </tr>
@@ -67,7 +67,7 @@
                           <option value="25">25</option>
                          
                         </select>
-                        <span class="ml-3 mr-2">Showing {{page.startingPoint+1}} to {{page.endPoint < appListLength?page.endPoint:appListLength}} of {{appListLength}}</span>
+                        <span class="ml-3 mr-2">Showing {{page.startingPoint+1}} to {{page.endPoint < appListLength-1?page.endPoint:appListLength}} of {{appListLength}}</span>
                         <input type="text" class="form-control mr-2" />
                         <button class="btn btn-primary">Go</button>
 
@@ -75,7 +75,7 @@
                           <li class="page-item" (click)="pagePrev()"><a class="page-link">Previous</a></li>
                           <li class="page-item {{page.currentPage === page.pageNo ? 'active' : ''}}" (click)=showPage(page.currentPage)><a class="page-link">{{page.currentPage}}</a></li>
                           <li class="page-item {{page.currentPage+1 === page.pageNo ? 'active' : ''}}" *ngIf="(page.pageNo*page.pageSize) < appListLength || page.currentPage+1 == page.pageNo ? true : false" (click)=showPage(page.currentPage+1)><a class="page-link">{{page.currentPage+1}}</a></li>
-                          <li class="page-item {{page.currentPage+2 === page.pageNo ? 'active' : ''}}" *ngIf="((page.pageNo+1)*page.pageSize) < appListLength ? true : false" (click)=showPage(page.currentPage+2)><a class="page-link">{{page.currentPage+2}}</a></li>
+                          <li class="page-item {{page.currentPage+2 === page.pageNo ? 'active' : ''}}" *ngIf="((page.pageNo+1)*page.pageSize) < appListLength || page.currentPage+2 == page.pageNo ? true : false" (click)=showPage(page.currentPage+2)><a class="page-link">{{page.currentPage+2}}</a></li>
                           <li class="page-item" (click)="pageNext()"><a class="page-link">Next</a></li>
                         </ul>
                       </div>
