--- a/src/app/application-onboarding/application/application.component.html
+++ b/src/app/application-onboarding/application/application.component.html
@@ -1,9 +1,9 @@
 <div class="tab-content h-100 p-3 flex-grow-1">
   <div class="tab-pane d-flex flex-column bg-white h-100 fade show active">
     <div class="page_access text-right py-2 px-3">
-      <button class="btn btn-default ml-1">Cancel</button>
+      <button class="btn btn-default ml-1" (click)="cancelForm()">Cancel</button>
       <button class="btn btn-default ml-2" disabled="disabled">Save</button>
-      <button class="btn btn-primary ml-2" disabled="disabled">Save & Finish</button>
+      <button class="btn btn-primary ml-2" (click)="SubmitForm()">Save & Finish</button>
     </div>
     <!-- /.page_access ml-auto -->
     <div class="setup-content">
@@ -107,7 +107,7 @@
                       class="help-block">
                       <span *ngIf="createApplicationForm.get('name').errors['required']">Application Name is
                         required</span>
-                      <span *ngIf="createApplicationForm.get('name').errors['nameMatches']">Application
+                      <span *ngIf="createApplicationForm.get('name').errors['applicationExist']">Application already
                         exists with same name. Please choose a unique application name</span>
                     </span>
                   </div>
@@ -375,7 +375,7 @@
   
   
           <div class="p-3 bottom-strp-cover gray-strip text-right">
-            <button class="btn btn-default">Cancel</button>
+            <button class="btn btn-default" (click)="cancelForm()">Cancel</button>
             <button class="btn btn-default ml-2" disabled="disabled">Save</button>
             <button class="btn btn-primary ml-2" (click)="SubmitForm()">Save & Finish</button>
           </div>
