removing edit and delete dropdownlist

--- a/src/app/application-dashboard/application-dashboard.component.html
+++ b/src/app/application-dashboard/application-dashboard.component.html
@@ -22,7 +22,7 @@
                 <span class="datetime">{{application.date | date:'medium'}} </span>
               </div>
               <!-- /.data_list_title -->
-              <div class="data_list_actionsc d-flex align-items-center ml-auto">
+              <!-- <div class="data_list_actionsc d-flex align-items-center ml-auto">
                 <div class="dropdown dropdown-icon-remove">
                   <button class="btn btn-default px-2" type="button" id="dropdownMenuButton" data-toggle="dropdown"
                     aria-haspopup="true" aria-expanded="false">
@@ -33,7 +33,7 @@
                       (click)="getReleases(menu,application.name,i,$event)">{{menu}}</a>
                   </div>
                 </div>
-              </div>
+              </div> -->
               <!-- /.data_list_actions -->
             </div>
             <!-- /.data_list_header -->
