--- a/src/app/audit/audit.component.html
+++ b/src/app/audit/audit.component.html
@@ -293,8 +293,8 @@
                       <div class="dropdown-menu dropdown-menu-filter dropdown-filter dropdown-menu-right"
                         aria-labelledby="dropdownMenuButton">
                         <form #customizeColumnForm="ngForm">
-                          <div class="custom-control custom-checkbox" *ngFor = "let columnName of currentTableHeader | keys; let i=index">
-                            <input type="checkbox"  class="custom-control-input" (change)="customizeColumn($event,i)" [disabled]="i<4" value="{{columnName.check}}" [checked]="showColumn[i] === 'true'" id="{{columnName}}">
+                          <div class="custom-control custom-checkbox" *ngFor = "let columnName of currentHeaderKeys; let i=index">
+                            <input type="checkbox"  class="custom-control-input" (change)="customizeColumn($event,i)" [disabled]="i<3" [checked]="showColumn[i] === 'true'" id="{{columnName}}">
                             <label class="custom-control-label" for="{{columnName}}">{{currentTableHeader[columnName]}}</label>
                           </div>
                           <div class="dropdown-footer dropdown-footer-border">
@@ -398,14 +398,14 @@
                 <table class="table table-sticky table-collaps table-dark-head mb-0">
                   <thead>
                     <tr>
-                      <ng-container *ngFor="let key of currentTableHeader | keys; let i=index">
+                      <ng-container *ngFor="let key of currentHeaderKeys; let i=index">
                         <th *ngIf="showColumn[i] === 'true'">{{currentTableHeader[key]}}</th>
                       </ng-container>
                     </tr>
                   </thead>
                   <tbody>
                     <tr *ngFor="let pageData of currentPage | filter:searchData; let i=index">
-                      <ng-container *ngFor="let dataKey of currentTableHeader | keys; let j=index">
+                      <ng-container *ngFor="let dataKey of currentHeaderKeys; let j=index">
                         <td *ngIf="showColumn[j] === 'true'">
                           <div *ngIf="dataKey.includes('Time'); then thenBlock else elseBlock"></div>
                           <ng-template #thenBlock><span>{{+pageData[dataKey] | date:'medium'}}</span></ng-template>
@@ -430,7 +430,7 @@
 
                 </select>
                 <span class="ml-3 mr-2">Showing {{page.startingPoint+1}} to
-                  {{page.endPoint < currentDatalength-1?page.endPoint:currentDatalength}} of
+                  {{page.endPoint < currentDatalength && page.endPoint > page.startingPoint ? page.endPoint:currentDatalength}} of
                   {{currentDatalength}}</span>
                 <input type="text" class="form-control mr-2" />
                 <button class="btn btn-primary">Go</button>
