--- a/src/app/release/release.component.less
+++ b/src/app/release/release.component.less
@@ -272,4 +272,20 @@
 .release-label {
 	width: 104px;
 }
+.inner-table {
+	background-color: #f0f2f5;
+	padding: 5px 10px !important;
+	.table {
+		opacity: 0.8;
+		width: 100%;
+		margin: 0;
+		th {
+			background: #fff;
+		}
+		td {
+			background: #fff;
+		}
+	}
+}
+
 
